force-app/main/default/objects/Apttus_XApps__FieldWrapper__c/Apttus_XApps__FieldWrapper__c.object-meta.xml
<CustomObject>
    <label>FieldWrapper</label>
    <nameField>
        <label>FieldWrapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldWrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>