force-app/main/default/objects/Apttus_XApps__FieldWrapper__c/fields/Apttus_XApps__Boolean__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean</label>
    <type>Checkbox</type>
</CustomField>