force-app/main/default/objects/Apttus_XApps__FieldWrapper__c/fields/Apttus_XApps__Currency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__Currency__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>