force-app/main/default/objects/Apttus_XApps__FieldWrapper__c/fields/Apttus_XApps__Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>