force-app/main/default/objects/Apttus_XApps__FieldWrapper__c/fields/Apttus_XApps__Datetime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__Datetime__c</fullName>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>